--- a/paper.tex
+++ b/paper.tex
@@ -93,7 +93,7 @@ The type of the row tuple is encoded in that of the table itself, hence the Juli
 
 The columns can be accessed using the \texttt{columns} function (e.g. \texttt{rows(lotr)} returns a named tuple of column vectors provided to \texttt{table} during construction) while the rows can be accessed as an array of tuples using the \texttt{rows} function rows is a struct of arrays view into the columnar storage, unlike \texttt{table} which returns a JuliaDB table, \texttt{rows} returns a legitimate Julia array.
 
-Naturally, tables support \texttt{map}, \texttt{reduce}, \texttt{groupreduce}, \texttt{groupby} and \texttt{join} operations. We will defer their discussion to the API documentation of JuliaDB \cite{juliadbapi}. Read the Sectoin \ref{sec:sort} for more about the implementation of some of these operations.
+Naturally, tables support \texttt{map}, \texttt{reduce}, \texttt{groupreduce}, \texttt{groupby} and \texttt{join} operations. We will defer their discussion to the API documentation of JuliaDB \cite{juliadbapi}. Read the Section~\ref{sec:sort} for more about the implementation of some of these operations.
 
 Listing 1 also illustrates use of \texttt{StringArray} and \texttt{PooledArray} array types as columns. These special array types enable efficient packing of String and categorical data respectively.
 
@@ -104,7 +104,7 @@ Listing 1 also illustrates use of \texttt{StringArray} and \texttt{PooledArray} 
   \label{fig:stringarray}
 \end{figure*}
 
-A \texttt{StringArray}'s stores a collection of strings with less memory indirection than a usual array of strings. Its memory layout is show in in Figure \ref{fig:stringarray}. The contents of strings (unicode character codes) are packed into a contiguous buffer of 8-bit unsigend integers. \texttt{StringArray} also stores the lengths of each string and the index (offset) at which each of them starts. Although it would suffice to store just the length of each string, storing offset also allows us to implement efficient mutation operations. Setting an element of the array appends the new string to the end of the buffer and replaces the length and offset with the corresponding new length and offsets for that item. Operations such as \texttt{sort!} and \texttt{permute!} (in place permutation of items) can simply modify the length and offset arrays and leave the buffer unmodified. Wherever suitable, in code internal to JuliaDB, we create \texttt{WeakRefString} instead of creating String objects when we index into a \texttt{StringArray}, this greatly reduces GC-load when dealing with string columns in operations such as groupby and join. Some advantages of a StringArray are 1) the buffer, and the length and offset vectors can be memory mapped to disk. 2) it takes less serialization overhead to send the same over the wire to another process.
+A \texttt{StringArray}'s stores a collection of strings with less memory indirection than a usual array of strings. Its memory layout is show in in Figure~\ref{fig:stringarray}. The contents of strings (unicode character codes) are packed into a contiguous buffer of 8-bit unsigend integers. \texttt{StringArray} also stores the lengths of each string and the index (offset) at which each of them starts. Although it would suffice to store just the length of each string, storing offset also allows us to implement efficient mutation operations. Setting an element of the array appends the new string to the end of the buffer and replaces the length and offset with the corresponding new length and offsets for that item. Operations such as \texttt{sort!} and \texttt{permute!} (in place permutation of items) can simply modify the length and offset arrays and leave the buffer unmodified. Wherever suitable, in code internal to JuliaDB, we create \texttt{WeakRefString} instead of creating String objects when we index into a \texttt{StringArray}, this greatly reduces GC-load when dealing with string columns in operations such as groupby and join. Some advantages of a StringArray are 1) the buffer, and the length and offset vectors can be memory mapped to disk. 2) it takes less serialization overhead to send the same over the wire to another process.
 
 If the number of unique elements in an array is much less than the number of elements in an array, it is benefitial to store it as a PooledArray. A PooledArray stores 1) a dictionary mapping each unique element to an integer (the ref of that value) 2) a dictionary mapping ref to its value (the inverse of 1)) and 3) an array of refs which denotes which unique value appears at what position in the actual data. This is a good compression mechanism for the data as well. PooledArrays also have efficient sorting algorithms as described in the next sub section. PooledArray refs can be memory mapped to and from disk.
 
