--- a/ref.bib
+++ b/ref.bib
@@ -443,7 +443,7 @@ url = {http://papers.nips.cc/paper/5423-generative-adversarial-nets.pdf}
   editor    = { St\'efan van der Walt and Jarrod Millman }
 }
 
-  @Manual{ dplyr,
+  @Manual{dplyr,
     title = {dplyr: A Grammar of Data Manipulation},
     author = {Hadley Wickham and Romain François and Lionel Henry and Kirill Müller},
     year = {2018},
@@ -526,12 +526,11 @@ url = {http://papers.nips.cc/paper/5423-generative-adversarial-nets.pdf}
 
 @ARTICLE{giordano2016,
   author =	 {{Giordano}, Mos{\`e}},
-  title =	 "{Uncertainty propagation with functionally correlated
-                  quantities}",
+  title =	 {Uncertainty propagation with functionally correlated quantities},
   journal =	 {ArXiv e-prints},
-  archivePrefix ="arXiv",
+  archivePrefix ={arXiv},
   eprint =	 {1610.08716},
-  primaryClass = "physics.data-an",
+  primaryClass = {physics.data-an},
   keywords =	 {Physics - Data Analysis, Statistics and Probability},
   year =	 2016,
   month =	 oct,
@@ -557,7 +556,7 @@ year = {2018}
 @misc{scalaslow,
   title = {Scala's immutable collections can be slow as a snail},
   howpublished = {\url{https://medium.com/@hussachai/scalas-immutable-collections-can-be-slow-as-a-snail-da6fc24bc688}},
-  author="Hussachai Puripunpinyo",
+  author={Hussachai Puripunpinyo},
   year=2016,
   month=oct,
   note = {Accessed: 2019-08-29}
@@ -566,16 +565,16 @@ year = {2018}
 @misc{claireh2018,
     title = {Simulating global plant biodiversity},
     howpublished = {\url{https://www.youtube.com/watch?v=EahBURR9b1U}},
-    author="Claire Harris, Richard Reeves, et. al}",
+    author={Claire Harris, Richard Reeves, et. al},
     year=2018,
     month=aug,
     note = {Accessed: 2019-08-29}
 }
 
 @misc{wes2017,
-    title = {Apache Arrow and the "10 Things I Hate About pandas"},
+    title = {Apache Arrow and the 10 Things I Hate About pandas},
     howpublished = {\url{https://wesmckinney.com/blog/apache-arrow-pandas-internals/}},
-    author="Wes McKinney"
+    author={Wes McKinney}
     year=2017,
     month=sep,
     note = {Accessed: 2019-08-29}
@@ -584,7 +583,20 @@ year = {2018}
 @misc{juliadbapi,
     title = {JuliaDB API documentation},
     howpublished = {\url{https://juliacomputing.github.io/JuliaDB.jl/latest/}},
-    author="Shashi Gowda, Josh Day, Pietro Vertechi, Jeff Bezanson et. al.",
+    author={Shashi Gowda, Josh Day, Pietro Vertechi, Jeff Bezanson et. al.},
     note = {Accessed: 2019-08-29}
 }
 
+@misc{pyspark,
+    title = {PySpark API documentation},
+    howpublished = {\url{https://spark.apache.org/docs/latest/api/python/}},
+    author={PySpark team},
+    note = {Accessed: 2019-08-29}
+}
+
+@misc{sparkr,
+    title = {SparkR (R for Spark)},
+    howpublished = {\url{https://spark.apache.org/docs/latest/sparkr.html}},
+    author={SparkR team},
+    note = {Accessed: 2019-08-29}
+}
